# menubar5

./: .gitignore  CMakeLists.txt  README.md
plasmoid/: metadata.desktop
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: BarRepresentation.qml  ButtonRepresentation.qml  MenuButton.qml  MenuComponent.qml  MenuItemComponent.qml  configGeneral.qml  main.qml
plugin/: CMakeLists.txt  MenuItem.qml  ToolButton.qml  com.canonical.AppMenu.Registrar.xml  com.canonical.AppMenu.Renderer.xml  importer_interface.cpp  importer_interface.h  kappmenuimporter.cpp  kappmenuimporter.h  menubarapplet.cpp  menubarapplet.h  menubaritem.cpp  menubaritem.h  menubarplugin.cpp  menubarplugin.h  menucloner.cpp  menucloner.h  menuinfo.h  menuutils.cpp  menuutils.h  menuwidget.cpp  menuwidget.h  plasma-applet-menubar.desktop  qmldir  windowmenumanager.cpp  windowmenumanager.h
